k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-notification
spec:
  selector:
    matchLabels:
      app: kafka-notification
  template:
    metadata:
      labels:
        app: kafka-notification
    spec:
      containers:
      - name: kafka-notification
        image: saitejajambarapu/linkedin-app-kafka-notification:latest
        resources:
          limits:
            memory: "400Mi"
            cpu: "200m"
          requests:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 9040
---
apiVersion: v1
kind: Service 
metadata:
  name: kafka-notification
spec:
  selector:
    app: kafka-notification
  ports:    
  - port: 80
    targetPort: 9040
