k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: saitejajambarapu/linkedin-app-user-service:latest
        resources:
          limits:
            memory: "400Mi"
            cpu: "200m"
          requests:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 9020
---
apiVersion: v1
kind: Service 
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:    
  - port: 80
    targetPort: 9020
