k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
  annotations:
  #need to change according to the ingress controller being used
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway
            port: 
              number: 80
